--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">{{title}}</a> <!-- INTERPOLACION DE VARIABLES -->
+    <a class="navbar-brand" [routerLink]="['/']">{{title}}</a> <!-- INTERPOLACION DE VARIABLES -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" [routerLink]="['/']">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" [routerLink]="['/about']">About</a>
         </li>
       </ul>
       <span class="navbar-text">
@@ -20,10 +20,7 @@
   </div>
 </nav>
 <div class="container">
-  <div class="row">
-    <div class="col-8"><app-heel-list></app-heel-list></div>
-    <div class="col-4">Cart</div>
-  </div>
+  <router-outlet></router-outlet>
 </div>
 <!-- Footer -->
 <footer class="text-center text-lg-start bg-white text-muted">
