--- a/src/app/heel-list/heel-list.component.html
+++ b/src/app/heel-list/heel-list.component.html
@@ -15,13 +15,10 @@
         <td>{{heel.name}}</td>
         <td>{{heel.type}}</td>
         <td>{{heel.price | currency}}</td>
-        <td><span class="badge text-bg-warning" *ngIf="heel.stock === 0">SIN STOCK</span></td>
+        <td><span class="badge text-bg-warning" *ngIf="heel.stock == 0">SIN STOCK</span></td>
         <td>
-            <button class="btn btn-primary btn-sm" (click)="downQuantity(heel)">-</button>
-            <!-- CONTROL DESDE EL INPUT -->
-            <!-- <input type="number" min="0" [max]="heel.stock" [(ngModel)]="heel.quantity">-->
-            <input type="text" [(ngModel)]="heel.quantity" (keyup)="changeQuantity($event, heel)">
-            <button class="btn btn-primary btn-sm" (click)="upQuantity(heel)">+</button>  
+          <app-input-integer [(quantity)]="heel.quantity" [max]="heel.stock" (maxReached)="maxReached($event)"  *ngIf="heel.stock"></app-input-integer>
+          Cant: {{heel.quantity}}
         </td>
       </tr>
     </tbody>
