[CLASS 7] Add cart-service and dependency injections

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,1 +1,8 @@
 <h3>Cart</h3>
+
+<ul>
+ <!-- <li *ngFor="let heel of cartList"> -->
+    <li *ngFor="let heel of (cartList$ | async)">    
+        {{heel.name}} : {{heel.quantity}}
+    </li>
+</ul>
